--- a/templates/leveleducationmajorresponse.html
+++ b/templates/leveleducationmajorresponse.html
@@ -3,8 +3,9 @@
 {% block body %}
 {{super()}}
 
-<p> {{bachelors}} </p>
-<p> {{masters}} </p>
-<p> {{doctorates}} </p>
-<p> {{professionals}} </p>
+<p> There are {{bachelors}} bachelors as of 2015. </p>
+<p> There are {{masters}} masters as of 2015. </p>
+<p> There are {{doctorates}} doctorates as of 2015. </p>
+<p> There are {{professionals}} professionals as of 2015. </p>
+<h3> Any data after 2015 is not recorded in this dataset. </h3>
 {% endblock %}
