--- a/templates/leveleducationmajorresponse.html
+++ b/templates/leveleducationmajorresponse.html
@@ -7,5 +7,5 @@
 <p> There are {{masters}} masters as of 2015. </p>
 <p> There are {{doctorates}} doctorates as of 2015. </p>
 <p> There are {{professionals}} professionals as of 2015. </p>
-<h3> Any data after 2015 is not recorded in this dataset. </h3>
+<h3> Any data after 2015 is not recorded in this dataset. Some data from before 2015 may not be recorded as well. </h3>
 {% endblock %}
