--- a/templates/salaryresponse.html
+++ b/templates/salaryresponse.html
@@ -9,6 +9,6 @@
 <p> The median salary for a person with a degree in <!-- degree name --> is <!-- salary number --> as of 2015. </p>
 <p> The quantity salary for a person with a degree in <!-- degree name --> is <!-- salary number --> as of 2015. </p>
 <p> The standard deviation salary for a person with a degree in <!-- degree name --> is <!-- salary number --> as of 2015. </p>
-<h3> Any data after 2015 is not recorded in this dataset. </h3>
+<h3> Any data after 2015 is not recorded in this dataset. Some data from before 2015 may not be recorded as well. </h3>
 
 {% endblock %}
