--- a/templates/occupationstatusresponse.html
+++ b/templates/occupationstatusresponse.html
@@ -3,9 +3,9 @@
 {% block body %}
 {{super()}}
 
-<p> There are <!-- # of people --> working in a Business/Industry as of 2015. </p>
-<p> There are <!-- # of people --> working in an Educational Institution as of 2015. </p>
-<p> There are <!-- # of people --> working for the Government as of 2015. </p>
+<p> There are {{ BusinessIndustry }} working in a Business/Industry as of 2015. </p>
+<p> There are {{ EducationalInstitution }} working in an Educational Institution as of 2015. </p>
+<p> There are {{ Government }} working for the Government as of 2015. </p>
 <h3> Any data after 2015 is not recorded in this dataset. Some data from before 2015 may not be recorded as well. </h3>
 
 {% endblock %}
