--- a/templates/occupationstatus.html
+++ b/templates/occupationstatus.html
@@ -7,6 +7,7 @@
 {% block heading %}Occupation Status by Major{% endblock %}
 
 {% block body %}
+<h2>Select a major</h2>
 	<form action="/occupationstatus">
   <select name="occupation">
 		{{ options }}
