--- a/templates/salary.html
+++ b/templates/salary.html
@@ -7,6 +7,7 @@
 {% block heading %}Salaries by Major{% endblock %}
 
 {% block body %}
+<h2>Select a major</h2>
 	<form action="/salary">
   <select name="salary">
 		{{ options }}
