--- a/templates/salaryresponse.html
+++ b/templates/salaryresponse.html
@@ -3,12 +3,12 @@
 {% block body %}
 {{super()}}
 
-<p> The highest salary for a person with this degree is {{ Highest }} as of 2015. </p>
-<p> The lowest salary for a person with this degree is {{ Lowest }} as of 2015. </p>
-<p> The mean salary for a person with this degree is {{ Mean }} as of 2015. </p>
-<p> The median salary for a person with this degree is {{ Median }} as of 2015. </p>
-<p> The quantity salary for a person with this degree is {{ Quantity }} as of 2015. </p>
-<p> The standard deviation salary for a person with this degree is {{ StandardDeviation }} as of 2015. </p>
+<p> The highest salary for a person with this degree is {{ highest }} as of 2015. </p>
+<p> The lowest salary for a person with this degree is {{ lowest }} as of 2015. </p>
+<p> The mean salary for a person with this degree is {{ mean }} as of 2015. </p>
+<p> The median salary for a person with this degree is {{ median }} as of 2015. </p>
+<p> The quantity salary for a person with this degree is {{ quantity }} as of 2015. </p>
+<p> The standard deviation salary for a person with this degree is {{ standardDeviation }} as of 2015. </p>
 <h3> Any data after 2015 is not recorded in this dataset. Some data from before 2015 may not be recorded as well. </h3>
 
 {% endblock %}
